--- a/css/style.css
+++ b/css/style.css
@@ -125,24 +125,20 @@ ul {
 
 .site-nav {
   display: flex;
-  align-items: center;
+
   margin-right: auto;
-}
 
-.site-nav .link.current {
-  color: var(--accent-color);
-}
-
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: var(--accent-color);
+  align-items: center;
 }
 
 .anchors {
   display: flex;
+  gap: 50px;
 }
 
 .anchors .link {
+  position: relative;
+
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -152,15 +148,26 @@ ul {
   letter-spacing: 0.02em;
 
   color: var(--secondary-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.item:not(:last-child) {
-  margin-right: 30px;
+.anchors .link:hover,
+.anchors .link:focus {
+  color: var(--accent-color);
+}
+
+.anchors.list .link.current {
+  color: var(--accent-color);
 }
 
 .auth-nav {
   display: flex;
   align-items: center;
+}
+
+.auth-nav-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .auth-nav .link {
@@ -175,6 +182,8 @@ ul {
   letter-spacing: 0.02em;
 
   color: var(--main-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .auth-nav .link:hover,
@@ -185,6 +194,19 @@ ul {
 .auth-icon-mail,
 .auth-icon-smartphone {
   fill: currentColor;
+}
+
+.anchors .link.current::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  width: 100%;
+  height: 4px;
+
+  background-color: var(--accent-color);
+  border-radius: 2px;
 }
 
 /* Герой */
@@ -232,15 +254,20 @@ ul {
 
   color: var(--main-white-color);
   background-color: var(--accent-color);
-  border: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: 0;
   border-radius: 4px;
+
+  /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-/* .hero > .button:hover,
-.hero > .button:focus {
-  background-color: #ffffff;
+/* .hero .button:hover,
+.hero .button:focus {
   color: var(--accent-color);
+  background-color: #ffffff;
+  
 } */
 
 /* Особливості */
@@ -355,11 +382,14 @@ ul {
   border-radius: 50%;
   color: var(--customers-color);
   background-color: transparent;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-link:hover,
 .socials-link:focus {
-  color: var(--geolocation-color);
+  color: var(--main-white-color);
   background-color: var(--accent-color);
 }
 
@@ -395,6 +425,8 @@ ul {
   color: var(--customers-color);
   border: 1px solid var(--customers-color);
   border-radius: 4px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover,
@@ -442,6 +474,17 @@ address {
   line-height: 1.71;
 
   color: var(--geolocation-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address-list .link:hover,
+.address-list .link:focus {
+  color: var(--accent-color);
+}
+
+.address-list .link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list .link:hover,
@@ -481,7 +524,9 @@ address {
 
 .socials-footer .socials-link {
   color: var(--main-white-color);
-  background: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.1);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-footer .socials-link:hover,
@@ -514,6 +559,10 @@ address {
 
   border: 0;
   border-radius: 4px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav-btn .btn:hover,
@@ -561,9 +610,98 @@ address {
   line-height: 1.88;
 }
 
+.portfolio-link {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .portfolio-link:hover,
 .portfolio-link:focus {
   display: block;
+
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-link:hover .overlay {
+  transform: translateY(0);
+}
+
+.portfolio-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  padding: 63px 24px;
+
+  transform: translateY(100%);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  background-color: rgba(33, 150, 243, 0.9);
+}
+
+.overlay-text {
+  font-size: 18px;
+  line-height: 1.56;
+
+  color: var(--main-white-color);
+}
+
+/* модальне вікно  */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  visibility: 0;
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(0.5);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-width: 528px;
+  min-height: 581px;
+
+  background-color: #ffffff;
+}
+
+.btn-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #ffffff;
+  cursor: pointer;
+}
+
+.icon-close {
+  fill: #000000;
 }
