--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,9 @@ ul {
 }
 
 /* Чим ми займаємось */
+.work-item {
+  position: relative;
+}
 
 .work-item:not(:last-child) {
   margin-right: 30px;
@@ -324,6 +327,24 @@ ul {
   color: var(--secondary-text-color);
 
   margin-bottom: 50px;
+}
+
+.work-overlay {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 27px 0;
+
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.work-overlay-text {
+  font-weight: 700;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: var(--main-white-color);
 }
 
 /* Наша команда */
