--- a/css/style.css
+++ b/css/style.css
@@ -643,7 +643,8 @@ address {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-link:hover .overlay {
+.portfolio-link:hover .overlay,
+.portfolio-link:focus .overlay {
   transform: translateY(0);
 }
 
@@ -686,13 +687,14 @@ address {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  visibility: visible;
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
-  visibility: 0;
+  visibility: hidden;
   opacity: 0;
   pointer-events: none;
 }
@@ -701,18 +703,22 @@ address {
   position: absolute;
   top: 50%;
   left: 50%;
-  opacity: 1;
+
   transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
 
   min-width: 528px;
   min-height: 581px;
 
   background-color: #ffffff;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.2);
   opacity: 0;
-  transform: translate(-50%, -50%) scale(0);
 }
 
 .btn-close {
