--- a/css/style.css
+++ b/css/style.css
@@ -453,7 +453,7 @@ ul {
 .customers-link:hover,
 .customers-link:focus {
   color: var(--accent-color);
-  border: 1px solid var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 .customers-icon {
@@ -643,11 +643,6 @@ address {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-link:hover .overlay,
-.portfolio-link:focus .overlay {
-  transform: translateY(0);
-}
-
 .portfolio-thumb {
   position: relative;
   overflow: hidden;
@@ -676,6 +671,11 @@ address {
   line-height: 1.56;
 
   color: var(--main-white-color);
+}
+
+.portfolio-link:hover .overlay,
+.portfolio-link:focus .overlay {
+  transform: translateY(0);
 }
 
 /* модальне вікно  */
